# kata

./: CONTRIBUTING.md  README.md  pyproject.toml
docs/: milestones.md  submissions.md  workflow.md
kata/: __main__.py  agent_bundle.py  challenge.py  cli.py  eval_pack.py  eval_runner.py  lane_state.py  live_progress.py  provenance.py  public_artifacts.py  screening.py  sn60_model_relay.py  submissions.py
kata/core/: __init__.py  round.py
kata/evaluators/: sn60_bitsec.py
kata/interfaces/: __init__.py  cli.py
kata/plugins/: __init__.py  contract.py  discovery.py  registry.py
kata/promotion/: __init__.py  king.py
kata/promotion_system/: king.py
kata/screening/: __init__.py  engine.py  python_ast.py  rules.py  similarity.py
kata/screening_system/: engine.py  rules.py  similarity.py
kata/state/: __init__.py  artifacts.py  lanes.py  progress.py
kata/state_system/: __init__.py  lane.py  live_progress.py  public_artifacts.py
kata/submission_system/: __init__.py  bundle.py  constants.py  validation.py  workflow.py
kata/submissions/: __init__.py  (+6 more)
public-results/: current.json
scripts/: run_python_agent_eval.sh
tests/: test_cli.py  test_core_round.py  test_envspec_execution.py  test_eval_pack.py  test_lane_state.py  test_live_progress.py  test_llm_review.py  test_plugin_dispatch.py  test_sandbox_canary.py  test_screening.py  test_screening_rules.py  test_sn22_plugin.py  test_sn60_bitsec.py  test_sn60_challenge.py  test_sn60_model_relay.py  test_sn60_plugin_round.py  test_static_screen_dispatch.py  test_submission_system.py  test_submissions.py
(+9 files in other folders)
