[project]
name = "kata"
version = "0.1.0"
description = "Objective coding-agent competition for repo-specific Gittensor repos."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
  { name = "Kata maintainers" }
]
dependencies = [
  # TDX quote verification for sealed-room (TEE) SN60 execution (KATA_SN60_USE_TEE_ROOM).
  "dcap-qvl>=0.5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]

[project.scripts]
kata = "kata.interfaces.cli:main"
kata-sn60-model-relay = "kata.packages.sn60.validator_system.model_relay:main"

# Subnet plugins are discovered via this entry-point group. A subnet package (in-repo today,
# its own repo tomorrow) declares one entry pointing at its SubnetPlugin singleton; the core
# loads every installed one with no code change. See kata/packages/dispatch.py.
[project.entry-points."kata.subnets"]
sn60 = "kata.packages.sn60:SN60_BITSEC_PLUGIN"
sn22 = "kata.packages.sn22:SN22_DESEARCH_PLUGIN"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kata"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["kings", "runs", "submissions"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
